fixes update and delete to work with new DB schema
